# python-threat-hunting-tools

./: .gitignore  README.md
browser_automation/: iocs.txt  virus_total_lookup.py
cmdline_args/: cisa_vulns_scraper_v2.py
creating_exes/: maltiverse_ip_lookup-v1.py  setup.py
interacting_with_apis/: maltiverse_ip_lookup-v2.py
jupyter_notebooks/: threat-hunting-notebook.ipynb
jupyter_notebooks/interacting_with_apis/: maltiverse_web_ip_lookup.py
misp/: misp-data.ipynb  misp-to-crowdstrike.py  misp-to-csv.py
parsing_csv/: CISA vulnerabilties - April 3, 2023 - CISA vulnerabilties - April 3, 2023.csv  critical-vulns.py
parsing_json/: parsing_api_json_data.py
vt_community_api/: verify-iocs.py
web_scraping/: README.md  pyproject.toml
web_scraping/web_scraping_cisa_advisory/: cisa_vulns_scraper.py
